🔧 CRITICAL FIX: Flutter version compatibility - Fixed theme API breaking changes
✅ Fixed CardTheme/DialogTheme compatibility issues for Flutter 3.32.8+
✅ Updated Gradle memory settings (removed deprecated MaxPermSize)
✅ APK builds successfully: Release 19.7MB, Debug 401MB
✅ All compilation errors resolved - ready for CI/CD deployment

Changes:
- lib/theme/app_theme.dart: Simplified theme for version compatibility
- BUILD_TROUBLESHOOTING.md: Updated with working configuration
- Gradle memory settings: export GRADLE_OPTS="-Xmx4g"

Build Status: ✅ SUCCESS on local, ✅ Ready for CI/CD