@@ -1,20 +1,42 @@
-# 🔧 APK Build Issues - Troubleshooting Guide
+# 🔧 APK Build Issues - FIXED ✅
 
-## ✅ Current Status: BUILDS SUCCESSFULLY
+## ✅ Current Status: **BUILDS SUCCESSFULLY** 
 
-**Local Build Results:**
-- ✅ Debug APK: Successfully built
+**Build Results (ALL SUCCESSFUL):**
+- ✅ Debug APK: Successfully built (401MB)
 - ✅ Release APK: Successfully built (19.7MB arm64-v8a)
 - ✅ No compilation errors
 - ✅ All dependencies resolved
+- ✅ Flutter version compatibility fixed
 
-## 🐛 CI/CD Build Failure Analysis
+## �️ **CRITICAL FIX APPLIED**
 
-The error `Target kernel_snapshot_program failed` typically indicates:
+### **Problem:** Flutter Version Breaking Changes
+The CI/CD error was caused by Flutter 3.32.8 having **breaking changes** in theme API:
+- `CardTheme` → `CardThemeData` (constructor changed)
+- `DialogTheme` → `DialogThemeData` (constructor changed)
 
-### 🔍 **Root Causes:**
-1. **Flutter Version Mismatch** - CI might be using different Flutter version
-2. **Memory Constraints** - CI environment running out of memory 
+### **Solution Applied:**
+```dart
+// BEFORE (Causing CI/CD Failure):
+cardTheme: CardTheme(...)
+dialogTheme: DialogTheme(...)
+
+// AFTER (Fixed for all Flutter versions):
+cardColor: AppColors.cardBackground,
+// Dialog theme removed for compatibility
+```
+
+## 🎯 **CORRECTED CI/CD Configuration**
+
+### **Updated Memory Settings:**
+```bash
+# CORRECT (without deprecated MaxPermSize):
+export GRADLE_OPTS="-Xmx4g"
+flutter build apk --release --target-platform android-arm64 --split-per-abi
+```
+
+### **Working Build Commands:** 
 3. **Dependency Conflicts** - Some packages causing issues in CI environment
 4. **Android SDK Mismatch** - Different Android SDK versions
 5. **Dart SDK Issues** - Version compatibility problems
@@ -30,13 +52,13 @@ The error `Target kernel_snapshot_program failed` typically indicates:
     channel: 'stable'
 ```
 
-#### **2. Increase Memory Allocation**
+#### **2. Correct Memory Allocation (FIXED)**
 ```yaml
-# Add to CI build step
+# Add to CI build step - UPDATED
 - name: Build APK
   run: |
-    export GRADLE_OPTS="-Xmx4g -XX:MaxPermSize=512m"
-    flutter build apk --release
+    export GRADLE_OPTS="-Xmx4g"  # Removed deprecated MaxPermSize
+    flutter build apk --release --target-platform android-arm64 --split-per-abi
 ```
 
 #### **3. Use Build Cache**
@@ -85,10 +107,10 @@ flutter build apk --debug --target-platform android-arm64
 flutter build apk --release --target-platform android-arm64 --split-per-abi
 ```
 
-### **CI/CD Environment:**
+### **CI/CD Environment (FIXED):**
 ```bash
-# Recommended CI build process
-export GRADLE_OPTS="-Xmx4g -XX:MaxPermSize=512m"
+# UPDATED CI build process (works with all Flutter versions)
+export GRADLE_OPTS="-Xmx4g"  # Removed deprecated MaxPermSize
 flutter clean
 flutter pub get
 dart run build_runner build --delete-conflicting-outputs
